[package]
name = "image-base64-wasm"
version = "0.6.0"
license = "MIT"
description = "Imaging library written in Rust supported by wasm. Provides basic filters and decoders for the most common image formats."
authors = [ "david6983 <dav6983@gmail.com>"]
readme = "README.md"
repository = "https://github.com/WasmPot/image-base64-rs.git"

[dependencies]
image = "0.23.12"
base64 = "0.13.0"
regex = "0.2.1"
hex = "0.4.2"
data-encoding = "2.3.1"
md5 = "0.7.0"